Import of ROODE/Time-Format_XS-0.11 from CPAN.
gitpan-cpan-distribution: Time-Format_XS
gitpan-cpan-version:      0.11
gitpan-cpan-path:         ROODE/Time-Format_XS-0.11.tar.gz
gitpan-cpan-author:       ROODE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Time/Format_XS version 0.10
+Time/Format_XS version 0.11
 ===========================
 
 This is a companion module to Time::Format.  It contains a version of
@@ -28,7 +28,7 @@ This module requires the following internationalization C header files
 
 and their associated libraries.
 
-COPYRIGHT AND LICENCE
+COPYRIGHT AND LICENSE
 
 Copyright (C) 2003 Eric J. Roode.  All rights reserved.
 
