--- a/Changes
+++ b/Changes
@@ -2,3 +2,7 @@ Revision history for Perl extension Time::Format_XS.
 
 0.10  2003 July 5
 	- First version.  Version number to match that of Time::Format.
+
+0.11  2003 Juy 11
+        - No changes.  Version number incremented to keep up with
+          Time::Format.
