Import of ROODE/Time-Format_XS-0.12 from CPAN.
gitpan-cpan-distribution: Time-Format_XS
gitpan-cpan-version:      0.12
gitpan-cpan-path:         ROODE/Time-Format_XS-0.12.tar.gz
gitpan-cpan-author:       ROODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,3 +6,8 @@ Revision history for Perl extension Time::Format_XS.
 0.11  2003 Juy 11
         - No changes.  Version number incremented to keep up with
           Time::Format.
+
+0.12  2003 July 20
+        - International month is now not case-converted; interpolated
+          in the locale-preferred capitalization.
+        - Support \Q, \U, \L, \E, \l, \u.
