Import of ROODE/Time-Format_XS-1.02 from CPAN.
gitpan-cpan-distribution: Time-Format_XS
gitpan-cpan-version:      1.02
gitpan-cpan-path:         ROODE/Time-Format_XS-1.02.tar.gz
gitpan-cpan-author:       ROODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -24,3 +24,7 @@ Revision history for Perl extension Time::Format_XS.
 1.01  2005 December 1
         - Now handles DateTime objects, stringified DateTimes,
           Date::Manip strings, and iso8601 strings.
+
+1.02  2005 December 1
+        - No changes. Had to increment the number because of a PAUSE
+          upload problem.
