Import of ROODE/Time-Format_XS-1.03 from CPAN.
gitpan-cpan-distribution: Time-Format_XS
gitpan-cpan-version:      1.03
gitpan-cpan-path:         ROODE/Time-Format_XS-1.03.tar.gz
gitpan-cpan-author:       ROODE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -28,3 +28,7 @@ Revision history for Perl extension Time::Format_XS.
 1.02  2005 December 1
         - No changes. Had to increment the number because of a PAUSE
           upload problem.
+
+1.03  2009 June 18
+        - Fix longstanding segfault bug in set_locale.
+        - Conditionally declare tzname, so will compile in mingw (Strawberry)
